add vods and clips query ordering
