# docs/swagger.yaml
@@ -143,6 +143,12 @@ paths:
         in: query
         name: vod
         type: string
+      - description: 'Set order direction divided by comma. Possible ordering values:
+          ''date'', ''duration'', ''size''. Possible directions: ''asc'', ''desc''.
+          Example: ''date,desc'''
+        in: query
+        name: order
+        type: string
       produces:
       - application/json
       responses:
@@ -341,6 +347,45 @@ paths:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: The uuid of a vod
+        in: query
+        name: uuid
+        type: string
+      - description: The title of a vod
+        in: query
+        name: title
+        type: string
+      - description: The duration of a vod
+        in: query
+        name: duration
+        type: integer
+      - description: The date of a vod
+        in: query
+        name: date
+        type: string
+      - description: The filename of a vod
+        in: query
+        name: filename
+        type: string
+      - description: The resolution of a vod
+        in: query
+        name: resolution
+        type: string
+      - description: The fps of a vod
+        in: query
+        name: fps
+        type: integer
+      - description: The size of a vod
+        in: query
+        name: size
+        type: integer
+      - description: 'Set order direction divided by comma. Possible ordering values:
+          ''date'', ''duration'', ''size''. Possible directions: ''asc'', ''desc''.
+          Example: ''date,desc'''
+        in: query
+        name: order
+        type: string
       produces:
       - application/json
       responses:
